--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -8,6 +8,11 @@
   border-bottom: 1px solid #3a3d45;
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+}
+
 .logo h1 {
   margin: 0;
   font-size: 1.5rem;
